# arjun-gis

./: CMakeLists.txt  README.md  arjungisConfig.cmake.in  gismoConfig.cmake.in
example/: example.edges  example.gcnf
scripts/: build_static.sh
src/: CMakeLists.txt  arjun.cpp  backward.cpp  common.cpp  common.h  config.h  dimacsparser-gis.h  forward.cpp  main.cpp  simplify.cpp
